compiler/test/compilable/imports/depsOutput21238_baz_stringimport.d
module imports.depsOutput21238_baz_stringimport;

template t_stringimport() { enum x = import("depsOutput21238_qux.d"); }
