compiler/test/fail_compilation/imports/unused_import.d
module imports.unused_import;
import imports.unused_import2;

enum a = 8;
void fun() {}
alias t = b;
alias h = c;
